--- a/apani.html
+++ b/apani.html
@@ -1,54 +1,152 @@
-<html lang="es">
-<head>
-    <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('goomaphy.com',5885018,document.createElement('script'))</script>
+<html>
+  <head>
+    <title>SCTV</title>
+    <meta charset="utf-8" />
+    <meta name="referrer" content="no-referrer" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script defer src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+    <script src="https://zyasyafaat.b-cdn.net/js/ui.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.4/controls.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="https://zyasyafaat.b-cdn.net/css/youtube-theme.css" />
+    <link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
+    <script>
+      (function(open) {
+        XMLHttpRequest.prototype.open = function(method, url, async, user, pass) {
+          rewrittenUrl = url;
+          open.call(this, method, rewrittenUrl, async, user, pass);
+        };
+      })(XMLHttpRequest.prototype.open);
+    </script>
+    <style>
+      @import "https://fonts.googleapis.com/css?family=Play:300,400,700";
+      @import "https://fonts.googleapis.com/css?family=Monda:300,400,700";
+      @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700";
 
-<meta name="robots" content="noindex" />
-<script src="//cdn.jsdelivr.net/npm/@clappr/player@0.4.0/dist/clappr.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/mux.js@5.6.7/dist/mux.min.js"></script>
-<script src='//cdn.jsdelivr.net/npm/level-selector@latest/dist/level-selector.min.js'></script>
-<script src='//cdn.jsdelivr.net/npm/clappr-chromecast-plugin@latest/dist/clappr-chromecast-plugin.min.js'></script>
-<script src='//cdn.jsdelivr.net/npm/clappr-pip@latest/dist/clappr-pip.min.js'></script>
-<script src='//cdn.jsdelivr.net/npm/clappr-playback-rate-plugin@latest/dist/clappr-playback-rate-plugin.min.js'></script>
-<script src="//cdn.jsdelivr.net/npm/shaka-player@2.5.10/dist/shaka-player.compiled.min.js"></script>
-<script src="//cdn.jsdelivr.net/gh/clappr/dash-shaka-playback@latest/dist/dash-shaka-playback.external.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/cdnbye-shaka@latest"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> 
-<style> 
+      body {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: #000;
+        margin: 0;
+        font-family: monda, sans-serif, source sans pro, Helvetica, Arial, sans-serif !important;
+        color: #000;
+      }
 
-.player-poster[data-poster] {
-  background-size: cover;
-}
-body{
-  margin:0;
-  padding:0;
-}
+      .myDiv {
+        /*border: 5px outset red;*/
+        background-color: transparent;
+        /*text-align: center;*/
+        height: 75px;
+        width: 100%;
+        opacity: 1;
+        transition: 0.3s;
+        top: 0;
+        position: absolute;
+      }
 
-</style>
-</head>
-<div id="player"></div>
-<script>
-var player = new Clappr.Player({
-        source: 'https://frankger.onrender.com/https://ec01-tpnet-waw.cdn-canalplus.pl/live/store01/CplusSport2HD/hd2-dashdrm02/CplusSport2HD.mpd',
-        mimeType: 'application/dash+xml',
-        height: '100%',
-        width: '100%',
-        plugins: [LevelSelector, DashShakaPlayback, ChromecastPlugin, ClapprPip.PipButton, ClapprPip.PipPlugin, Clappr.MediaControl],
-        events: {onReady: function() {var plugin = this.getPlugin('click_to_pause'); plugin && plugin.disable();},},
-        chromecast: {
-            appId: '9DFB77C0',
-            contentType: 'video/mp4',
-        },
-        shakaConfiguration: {
-            drm: {
-                "clearKeys": {
-					"4f7fa9f0250a43cea8aebd8167f1fc81": "f6bbc783b0e7a46a147e673a4347730a",
-					"89787fecb0ac43ab86aa356054e2a183": "f0153c6dc5c55c5f23fcdeed8241d5e4",
-					"f5c080517f6c4366b1930315a6aa70e7": "581eba7045254d1de036557789932a05"
+      .myDiv:hover {
+        opacity: 0.3;
+      }
 
-                } 
-            },
-        },
-        shakaOnBeforeLoad: function(shaka_player) {},
-        parentId: '#player'
-    });
-</script>
+      img {
+        float: left;
+        right: 20px;
+        /*margin: 30px 30px 30px 0;*/
+        margin-left: 30px;
+        margin-top: 20px;
+      }
+
+      #player {
+        width: 100vw;
+        /*height: 100%;*/
+        height: calc(100% - 100px);
+        max-height: 100vh;
+        max-width: 177.78vh;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        background-color: #000;
+        right: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <section id="wrap">
+      <div class="youtube-theme">
+        <video autoplay autostart="true" data-shaka-player poster="/img/tv-static.gif" id="youtube-theme" style="width: 100vw; height: calc(var(--vh, 1vh) * 100);"></video>
+      </div>
+    </section>
+    <script type="text/javascript">
+      const youtube_theme_manifestUri = 'https://atemecdnbalancer-voe.sysln.id/live/eds/IndosiarHD/mpd/IndosiarHD.mpd';
+      async function init() {
+        const video = document.getElementById('youtube-theme');
+        const ui = video['ui'];
+        const config = {
+          'seekBarColors': {
+            base: 'rgba(255,255,255,.2)',
+            buffered: 'rgba(255,255,255,.4)',
+            played: 'rgb(255,0,0)',
+          }
+        }
+        ui.configure(config);
+        const controls = ui.getControls();
+        const player = controls.getPlayer();
+        player.configure({
+          drm: {
+            clearKeys: {
+              // 'key-id-in-hex'                : 'key-in-hex',
+              '5eaddccd893a47ac8b65f9b31963a3ae': '881afa67ea57b41c1822d745d67559e6',
+            }
+          }
+        });
+        // Attach player and ui to the window to make it easy to access in the JS console.
+        window.player = player;
+        window.ui = ui;
+        // Listen for error events.
+        player.addEventListener('error', onPlayerErrorEvent);
+        controls.addEventListener('error', onUIErrorEvent);
+        try {
+          await player.load(youtube_theme_manifestUri);
+        } catch (error) {
+          onPlayerError(error);
+        }
+
+        function onPlayerErrorEvent(errorEvent) {
+          // Extract the shaka.util.Error object from the event.
+          onPlayerError(event.detail);
+        }
+
+        function onPlayerError(error) {
+          // Handle player error
+          console.error('Error code', error.code, 'object', error);
+        }
+
+        function onUIErrorEvent(errorEvent) {
+          // Extract the shaka.util.Error object from the event.
+          onPlayerError(event.detail);
+        }
+
+        function initFailed(errorEvent) {
+          // Handle the failure to load; errorEvent.detail.reasonCode has a
+          // shaka.ui.FailReasonCode describing why.
+          console.error('Unable to load the UI library!');
+        }
+        // TODO find a way to do this without jquery. -___- or find a way to replace them CSS. maybe usering :after  
+        $('.shaka-overflow-menu-button').html('settings');
+        $('.shaka-back-to-overflow-button .material-icons-round').html('arrow_back_ios_new');
+      }
+      document.addEventListener('shaka-ui-loaded', init);
+      // Listen to the custom shaka-ui-load-failed event, in case Shaka Player fails
+      // to load (e.g. due to lack of browser support).
+      document.addEventListener('shaka-ui-load-failed', initFailed);
+    </script>
+  </body>
+</html>
