--- a/apani.html
+++ b/apani.html
@@ -1,152 +1,51 @@
-<html>
-  <head>
-    <title>SCTV</title>
-    <meta charset="utf-8" />
-    <meta name="referrer" content="no-referrer" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script defer src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
-    <script src="https://zyasyafaat.b-cdn.net/js/ui.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.4/controls.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="https://zyasyafaat.b-cdn.net/css/youtube-theme.css" />
-    <link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
-    <script>
-      (function(open) {
-        XMLHttpRequest.prototype.open = function(method, url, async, user, pass) {
-          rewrittenUrl = url;
-          open.call(this, method, rewrittenUrl, async, user, pass);
-        };
-      })(XMLHttpRequest.prototype.open);
-    </script>
-    <style>
-      @import "https://fonts.googleapis.com/css?family=Play:300,400,700";
-      @import "https://fonts.googleapis.com/css?family=Monda:300,400,700";
-      @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700";
-
-      body {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        background-color: #000;
-        margin: 0;
-        font-family: monda, sans-serif, source sans pro, Helvetica, Arial, sans-serif !important;
-        color: #000;
-      }
-
-      .myDiv {
-        /*border: 5px outset red;*/
-        background-color: transparent;
-        /*text-align: center;*/
-        height: 75px;
-        width: 100%;
-        opacity: 1;
-        transition: 0.3s;
-        top: 0;
-        position: absolute;
-      }
-
-      .myDiv:hover {
-        opacity: 0.3;
-      }
-
-      img {
-        float: left;
-        right: 20px;
-        /*margin: 30px 30px 30px 0;*/
-        margin-left: 30px;
-        margin-top: 20px;
-      }
-
-      #player {
-        width: 100vw;
-        /*height: 100%;*/
-        height: calc(100% - 100px);
-        max-height: 100vh;
-        max-width: 177.78vh;
-        margin: auto;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        background-color: #000;
-        right: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <section id="wrap">
-      <div class="youtube-theme">
-        <video autoplay autostart="true" data-shaka-player poster="/img/tv-static.gif" id="youtube-theme" style="width: 100vw; height: calc(var(--vh, 1vh) * 100);"></video>
-      </div>
-    </section>
-    <script type="text/javascript">
-      const youtube_theme_manifestUri = 'https://atemecdnbalancer-voe.sysln.id/live/eds/IndosiarHD/mpd/IndosiarHD.mpd';
-      async function init() {
-        const video = document.getElementById('youtube-theme');
-        const ui = video['ui'];
-        const config = {
-          'seekBarColors': {
-            base: 'rgba(255,255,255,.2)',
-            buffered: 'rgba(255,255,255,.4)',
-            played: 'rgb(255,0,0)',
-          }
-        }
-        ui.configure(config);
-        const controls = ui.getControls();
-        const player = controls.getPlayer();
-        player.configure({
-          drm: {
-            clearKeys: {
-              // 'key-id-in-hex'                : 'key-in-hex',
-              '5eaddccd893a47ac8b65f9b31963a3ae': '881afa67ea57b41c1822d745d67559e6',
-            }
-          }
-        });
-        // Attach player and ui to the window to make it easy to access in the JS console.
-        window.player = player;
-        window.ui = ui;
-        // Listen for error events.
-        player.addEventListener('error', onPlayerErrorEvent);
-        controls.addEventListener('error', onUIErrorEvent);
-        try {
-          await player.load(youtube_theme_manifestUri);
-        } catch (error) {
-          onPlayerError(error);
-        }
-
-        function onPlayerErrorEvent(errorEvent) {
-          // Extract the shaka.util.Error object from the event.
-          onPlayerError(event.detail);
-        }
-
-        function onPlayerError(error) {
-          // Handle player error
-          console.error('Error code', error.code, 'object', error);
-        }
-
-        function onUIErrorEvent(errorEvent) {
-          // Extract the shaka.util.Error object from the event.
-          onPlayerError(event.detail);
-        }
-
-        function initFailed(errorEvent) {
-          // Handle the failure to load; errorEvent.detail.reasonCode has a
-          // shaka.ui.FailReasonCode describing why.
-          console.error('Unable to load the UI library!');
-        }
-        // TODO find a way to do this without jquery. -___- or find a way to replace them CSS. maybe usering :after  
-        $('.shaka-overflow-menu-button').html('settings');
-        $('.shaka-back-to-overflow-button .material-icons-round').html('arrow_back_ios_new');
-      }
-      document.addEventListener('shaka-ui-loaded', init);
-      // Listen to the custom shaka-ui-load-failed event, in case Shaka Player fails
-      // to load (e.g. due to lack of browser support).
-      document.addEventListener('shaka-ui-load-failed', initFailed);
-    </script>
-  </body>
+<!DOCTYPE html><html><head>
+<script src="/cdn-cgi/apps/head/aqhzBqkyhgXFT9tYquvCBE2xpuY.js"></script><style>div a img{visibility:hidden;}</style>
+<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+<meta name="referrer" content="no-referrer" />
+<script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin='anonymous'></script>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/controls.min.css' crossorigin='anonymous' />
+<script async src='/cdn-cgi/challenge-platform/h/g/scripts/invisible.js?cb=6ebfddfd6fa3499c'></script></head><body><script>!function(a,b,c,d,e,f){a.ddjskey=e;a.ddoptions=f||null;var m=b.createElement(c),n=b.getElementsByTagName(c)[0];m.async=1,m.src=d,n.parentNode.insertBefore(m,n)}(window,document,"script","https://js.datadome.co/tags.js","99B1C08278137CE22ADB60CE8DE020", {"ajaxListenerPath": true});</script>
+<body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false' onmousedown='return false'>
+  
+   <style>
+    
+    .video-fill video {
+  object-fit: fill;
+}
+    
+  </style>
+  
+  <script>!function(a,b,c,d,e,f){a.ddjskey=e;a.ddoptions=f||null;var m=b.createElement(c),n=b.getElementsByTagName(c)[0];m.async=1,m.src=d,n.parentNode.insertBefore(m,n)}(window,document,"script","https://js.datadome.co/tags.js","99B1C08278137CE22ADB60CE8DE020", {"ajaxListenerPath": true});</script>
+<div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'><video autoplay data-shaka-player id='video' poster="https://raw.githubusercontent.com/tvbolaonline98/sopporot/main/sbo_logo.png" style='width:100%;height:100%;'></video></div>
+<script> 
+async function init() { 
+const video = document.getElementById('video'); 
+const ui = video['ui']; 
+const controls = ui.getControls(); 
+const player = controls.getPlayer(); 
+player.configure({
+  drm: {
+    clearKeys: {
+      // 'key-id-in-hex': 'key-in-hex',
+      '8ab47741930c476780515f9a00decb0a': '7ab4b9ae5a48aa526e511a913b832769'
+    }
+  }
+});
+//player.configure({drm:{servers:{'com.widevine.alpha':'https://license.dstv.com/widevine/getLicense?CrmId=afl&AccountId=afl&ContentId=SH2&SessionId=D3C00F885C24B9C6&Ticket=C839A8D71AB94299'}}}); 
+window.player = player; 
+window.ui = ui; 
+player.addEventListener('error', onPlayerErrorEvent); 
+controls.addEventListener('error', onUIErrorEvent); 
+try{await player.load('https://dcf-fs-live-dazn-cdn.dazn.com/dashdrm/dazn-linear-047/stream.mpd'); 
+console.log('The video has now been loaded!');} catch (error) {onPlayerError(error);}} 
+function onPlayerErrorEvent(errorEvent) {onPlayerError(event.detail);} 
+function onPlayerError(error) {console.error('Error code', error.code, 'object', error);} 
+function onUIErrorEvent(errorEvent) {onPlayerError(event.detail);} 
+function initFailed(errorEvent) {console.error('Unable to load the UI library!');} 
+document.addEventListener('shaka-ui-loaded', init); 
+document.addEventListener('shaka-ui-load-failed', initFailed); 
+</script>
+<script type='text/javascript' src='https://encrypt2.skycdn.ga/udp/Counter'></script>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6ebfddfd6fa3499c',m:'D4YJv6au4IB.PA2DqTLxZStJydWh51fiwv2G9eC_8Gk-1647290874-0-AYjwUV5YDhzDCl2C9r7Xi8tcRCaEcQTbCAMGCeTNqDvB45L3MnGBdkKHu6G387dXhgYcctN3ANz21D9fu1HhsRAcyKR0VCGqS9aNi6PQ8MvMDWfoO6WhJhqlukHMDXtYfg==',s:[0x6c6fafcade,0x9f5e65094f],u:'/cdn-cgi/challenge-platform/h/g'}})();</script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"6ebfddfd6fa3499c","version":"2021.12.0","r":1,"token":"a919438182254588b33b5297605b9ab4","si":100}' crossorigin="anonymous"></script>
 </html>
+  
