--- a/jw.html
+++ b/jw.html
@@ -418,6 +418,7 @@ jwplayer("container").setup({
    displaytitle: false,
    fullscreen: "true",
    primary: 'html5',
+	stretching: "exactfit",
    autostart: false,
 
 logo: {
