--- a/indosiar.html
+++ b/indosiar.html
@@ -321,7 +321,7 @@ if (Hls.isSupported()) {
       $(vid).attr({
         "autoplay": "true",
         "preload": "auto",
-          "stretching": "exactfit",
+         "object-fit":"fill",
         "playsinline": "true",
         "poster": "https://images.indihometv.com/tvposter/indosiar.png",
         "controlsList": "nodownload noremoteplayback"
