--- a/indosiar.html
+++ b/indosiar.html
@@ -291,9 +291,10 @@ if (Hls.isSupported()) {
 }
 </script>-->
 
-<div class="theme-blue">
-    <video class="live video" data-shaka-player="" id="video"></video>
-  </div>
+
+
+    <div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'><video autoplay data-shaka-player id='video' poster="https://tboys88.github.io/Test-In/zlogo.jpeg" style='width:100%;height:100%;'></video></div>
+    
 
     
   <script>
@@ -321,7 +322,6 @@ if (Hls.isSupported()) {
       $(vid).attr({
         "autoplay": "true",
         "preload": "auto",
-         "object-fit":"fill",
         "playsinline": "true",
         "poster": "https://images.indihometv.com/tvposter/indosiar.png",
         "controlsList": "nodownload noremoteplayback"
