--- a/indosiar.html
+++ b/indosiar.html
@@ -1,115 +1,35 @@
 <!DOCTYPE html><html><head> <meta name='viewport' content='width=device-width, initial-scale=1.0'/> <script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.9.4/shaka-player.ui.min.js' crossorigin='anonymous'></script> <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.9.4/controls.min.css' crossorigin='anonymous'/> <link href="https://fonts.googleapis.com/css?family=Material+Icons+Sharp" rel="stylesheet"> <link href="https://pidio.pages.dev/player/style.css" rel="stylesheet"> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"><style>body{margin:0;font-family:Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";font-size:.94rem;font-weight:400;line-height:1.5;color:#aaa;text-align:left;background-color:#000;}</style><script src="https://xystv.pages.dev/player/captos.js"></script>
 </head><body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false' onmousedown='return false'> <div id='vidio' class="vidio" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'> <video autoplay data-shaka-player id='video' class='rasio' poster="https://images.indihometv.com/tvposter/indosiar.png" style='width:100%;height:100%;'></video> <div class="shaka-controls-container" shown="false"> <div class="shaka-scrim-container"></div> <div class="shaka-play-buton-container"> <button class="shaka-play-button shaka-no-propagation" ion="pause" aria-abel="Pause"></button> </div> <div class="shaka-server-side-ad-container"></div> <div class="shaka-bottom-controls shaka-no-propagation"> <div class="shaka-ad-controls shaka-hidden"> <div class="shaka-ad-position shaka-hidden"> <span class="shaka-ad-position-span"></span> </div> <div class="shaka-ad-counter"> <span class="shaka-ad-counter-span"></span> </div> </div> <div class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"> <img src="https://pidio.pages.dev/player/watermark.png" style='width:15% ;height:100%;' class="shaka-fullscreen-button material-icons-round shaka-tooltip" aria-label="mute"> </div> </div> </div> </div> <div id='fixedban' style='width:100%;margin:auto;text-align:center;float:none;overflow:hidden;display:scroll;position:;bottom:0;z-index:999;-webkit-transform:translateZ(0);'> <div><div id='fixedban' style='width:100%;margin:auto;text-align:center;float:none;overflow:hidden;display:scroll;position:;bottom:0;z-index:999;-webkit-transform:translateZ(0);'><div><a id='close-fixedban' onclick='document.getElementById("fixedban").style.display = "none";' style='cursor:pointer;'></a></div><div style='text-align:center;display:block;max-width:100%;height:auto;overflow:hidden;margin:auto'>		<center> <div class="row" style="padding:0px;margin-left:0px;margin-bottom:px"><div class="col-3" style="padding:0px;"> <div class="card game-itme border-2 list-levels " style="margin:0px;padding:0px;border-radius:0px;border: 1px solid #000"><div class="w-100 time-is-captitle" style="text-align:center;padding:0px;margin-left:0" onclick="refreshPage ()" ><font style="font-size:9px;font-weight:600;color:#fff">REFRESH </font></div></a></div></div> <div class="col-3" style="padding:0px;"> <div class="card game-itme border-1 list-levels " style="margin:0px;padding:0px;border-radius:0px;border: 1px solid #000"><div class="w-100 time-is-captitle" style="text-align:center;padding:0px;margin-left:0" onclick="toggleFillFit ()" ><font style="font-size:9px;font-weight:600;color:#fff">FIL/FIT</font></div></a></div></div> <div class="col-3" style="padding:0px;"> <div class="card game-itme border-1 list-levels " style="margin:0px;padding:0px;border-radius:0px;border: 1px solid #000"><div class="w-100 time-is-captitle" style="text-align:center;padding:0px;margin-left:0" onclick="toggleZoom ()" ><font style="font-size:9px;font-weight:600;color:#fff">ZOOM IN/OUT</font></div></a></div></div>
 
-<div class="col-3" style="padding:0px;"> <div class="card game-itme border-1 list-levels " style="margin:0px;padding:0px;border-radius:0px;border: 1px solid #000"><div class="w-100 time-is-captitle" style="text-align:center;padding:0px;margin-left:0"><font style="font-size:9px;font-weight:600;color:#fff"><a href= "go:ns3bb_36"> OPEN NS PLAYER </font></div> </a></a></div></div></center></div></div></div><script src='https://xystv.pages.dev/player/aspekRasio.js' crossorigin='anonymous'></script> <  <script>
-    const 
-      manifestUri = 'https://atemecdnbalancer-voe.sysln.id/live/eds/IndosiarHD/mpd/IndosiarHD.mpd',
-    channel = 'TV3';
-
-    const
-      vid = document.getElementById("video"),
-     ch = document.getElementById("title");
-    cs = document.getElementById("live");
-
-    $(vid).ready(function() {
-      var completeloaded = false;
-      var vids = $("video");
-      vids.on("canplaythrough", function() {
-        $(ch).html(channel);
-        $(cs).html("<span style='color:crimson;'>&#x25cf;</span> LIVE");
-        setTimeout(function() {
-          $(vid).trigger("play");
-        }, 2500);
-        completeloaded = true;
-      });
-
-      $(vid).attr({
-        "autoplay": "true",
-        "preload": "auto",
-        "playsinline": "true",
-        "poster": "https://images.indihometv.com/tvposter/indosiar.png",
-        "controlsList": "nodownload noremoteplayback"
-      });
-    });
-
-    function initApp() {
-      shaka.polyfill.installAll();
-      if (shaka.Player.isBrowserSupported()) {
-        init();
-      } else {
-        console.error('Browser not supported!');
-      }
+<div class="col-3" style="padding:0px;"> <div class="card game-itme border-1 list-levels " style="margin:0px;padding:0px;border-radius:0px;border: 1px solid #000"><div class="w-100 time-is-captitle" style="text-align:center;padding:0px;margin-left:0"><font style="font-size:9px;font-weight:600;color:#fff"><a href= "go:ns3bb_36"> OPEN NS PLAYER </font></div> </a></a></div></div></center></div></div></div><script src='https://xystv.pages.dev/player/aspekRasio.js' crossorigin='anonymous'></script> <script> 
+async function init() { 
+const video = document.getElementById('video'); 
+const ui = video['ui']; 
+const controls = ui.getControls(); 
+const player = controls.getPlayer(); 
+player.configure({
+  drm: {
+    clearKeys: {
+      // 'key-id-in-hex': 'key-in-hex',
+      '5eaddccd893a47ac8b65f9b31963a3ae': '881afa67ea57b41c1822d745d67559e6'
     }
-
-    async function init() {
-      const video = document.getElementById('video');
-      const ui = video['ui'];
-      const controls = ui.getControls();
-      const player = controls.getPlayer();
-      const config = {
-        'seekBarColors': {
-          base: 'rgba(66, 133, 244, 0.35)',
-          buffered: 'rgba(66, 133, 244, 0.6)',
-          played: 'rgba(66, 133, 244, 0.8)',
-        },
-        'volumeBarColors': {
-          base: 'rgba(66, 133, 244, 0.8)',
-          level: 'rgb(66, 133, 244)',
-        }
-      }
-      ui.configure(config);
-
-      window.player = player;
-      window.ui = ui;
-      window.controls = controls;
-
-      player.addEventListener("error", onPlayerErrorEvent);
-      controls.addEventListener("error", onUIErrorEvent);
-
-      try {
-        await player.load(manifestUri);
-        console.log('The video has now been loaded!');
-      } catch (error) {
-        onPlayerError(error);
-      }
-
-      player.configure({
-        drm: {
-          clearKeys: {
-            '5eaddccd893a47ac8b65f9b31963a3ae': '881afa67ea57b41c1822d745d67559e6'
-          }
-        }
-      });
-
-      function onPlayerErrorEvent(errorEvent) {
-        onPlayerError(event.detail);
-      }
-
-      function onPlayerError(error) {
-        console.error('Error code', error.code + ':', 'Video could not be loaded!', '[Media not found].');
-      }
-
-      function onUIErrorEvent(errorEvent) {
-        onPlayerError(event.detail);
-      }
-    }
-
-    function initFailed(errorEvent) {
-      console.error('Unable to load the UI library!');
-    }
-
-    document.addEventListener('shaka-ui-loaded', init);
-    document.addEventListener('shaka-ui-load-failed', initFailed);
-    document.addEventListener('DOMContentLoaded', initApp);
-
-    Object.defineProperty(navigator, 'userAgent', {
+  }
+});
+//player.configure({drm:{servers:{'com.widevine.alpha':'https://license.dstv.com/widevine/getLicense?CrmId=afl&AccountId=afl&ContentId=SH2&SessionId=D3C00F885C24B9C6&Ticket=C839A8D71AB94299'}}}); 
+window.player = player; 
+window.ui = ui; 
+player.addEventListener('error', onPlayerErrorEvent); 
+controls.addEventListener('error', onUIErrorEvent); 
+try{await player.load('https://atemecdnbalancer-voe.sysln.id/live/eds/IndosiarHD/mpd/IndosiarHD.mpd'); 
+console.log('The video has now been loaded!');} catch (error) {onPlayerError(error);}} 
+function onPlayerErrorEvent(errorEvent) {onPlayerError(event.detail);} 
+function onPlayerError(error) {console.error('Error code', error.code, 'object', error);} 
+function onUIErrorEvent(errorEvent) {onPlayerError(event.detail);} 
+function initFailed(errorEvent) {console.error('Unable to load the UI library!');} 
+document.addEventListener('shaka-ui-loaded', init); 
+document.addEventListener('shaka-ui-load-failed', initFailed); 
+Object.defineProperty(navigator, 'userAgent', {
       get: function() { // Latest update.
         return 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Firefox/112.0 Safari/605.1.15 Edg/112.0.1722.48 OPR/97.0.4719.17 Vivaldi/5.7.2921.68 YaBrowser/23.3.0 Yowser/2.5';
       }
-
-      /** ShakaPlayer
-       * Does not support browsers.
-       * Internet Explorer (IE11) / Trident/7.0; rv:11.0
-       */
-    });
-  </script> </html> 
+</script> </html> 
