--- a/test.html
+++ b/test.html
@@ -448,7 +448,7 @@ logo: {
    file: "https://acong.freemiumiptv.top/mnclokal/live/eds/soccerchannel-test/sa_dash_vmx/soccerchannel-test.mpd",
           
    drm: {
-            widevine: { 'url':"https://drmwidevine.nontonbola.my.id/https://acong.freemiumiptv.top/gdp/mncwidevine/?token=Uk56cEp6eTlIRjdNYUdrZEVZK3VUQT09Ojrv6Epfvtvla6AgaRET2Z96"}},
+            widevine: { 'url':"https://drmwidevine.nontonbola.my.id/https://mrpw.ptmnc01.verspective.net/?deviceId=YzM0NDA0MTItMGYyMC0zNGQ0LTliMjMtNDY4MjE1ZjA5NmZj"}},
 
 	   
    label: '4K',
