--- a/test.html
+++ b/test.html
@@ -445,10 +445,10 @@ logo: {
    //description: "",
    image: "",
    sources: [{
-   file: "https://acong.freemiumiptv.top/mnclokal/live/eds/soccerchannel-test/sa_dash_vmx/soccerchannel-test.mpd",
+   file: "https://cdnjkt4.transvision.co.id:1000/live/master/4/4028c6856c3db2cc016d054fbf67379f/manifest.mpd",
           
    drm: {
-            widevine: { 'url':"https://acong.freemiumiptv.top/gdp/mncwidevine/?token=Uk56cEp6eTlIRjdNYUdrZEVZK3VUQT09Ojrv6Epfvtvla6AgaRET2Z96"}},
+            widevine: { 'url':"https://lic-cubmux.konslet.workers.dev/4rr0w/play.wv"}},
 
 	   
    label: '4K',
